dataset1235/2025-2/1955397009/users/209087680/executions/1107611404_1078076002.log
== RUN (2025-08-20 21:05:24)
-- CODE: 
x1=1.23
x2=0
print(x2
     )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 21:04:10)
-- CODE: 
x1="Ufam

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x1="Ufam
       ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x1="Ufam
       ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 21:03:36)
-- CODE: 
x1=1.23
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
None
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 21:05:53)
-- CODE: 
x1=1.23
print(x1)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.23
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
1.23
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 21:04:36)
-- CODE: 
x1="Ufam"
print(x1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
Ufam
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 21:03:28)
-- CODE: 
x 1=1.23
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x 1=1.23
      ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
-- ERROR:
File "XXXX", line 1
    x 1=1.23
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 21:04:17)
-- CODE: 
x1="Ufam"

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1.23
---- correct output:
1.23
---- user output:
None
-- TEST CASE 2:
---- input:
1.23
---- correct output:
1.23
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
